# gsc-client

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  tests.yml
man/: gsc.1  submit211.7
man/man1/: gsc.1
scripts/: eecs-install.sh  install.sh  update-man-pages.sh
src/: config.rs  cookie.rs  credentials.rs  errors.rs  lib.rs  messages.rs  table.rs  util.rs
src/args/: traits.rs  types.rs
src/cmd/: ls.rs  mod.rs  mv.rs
