[package]
name = "gsc-client"
version = "0.3.0-alpha.0"
authors = ["Jesse A. Tov <jesse@eecs.northwestern.edu>"]
edition = "2018"

[features]
admin = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
error-chain = "0.12.1"
fs2 = "0.4.3"
globset = "0.4.4"
lazy_static = "1.4"
percent-encoding = "2.1.0"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
tabular = "0.1.4"
textwrap = { version = "0.11", features = ["term_size"] }
thousands = "0.2.0"
unicode-width = "0.1.7"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rpassword = "4.0.4"
vlog = "0.1.4"
