[package]
name = "gsc-client"
version = "0.10.1-alpha.0"
description = "Command line interface to the GSC homework server"
authors = ["Jesse A. Tov <jesse@cs.northwestern.edu>"]
edition = "2018"
license = "GPL-3.0"
build = "build.rs"

[features]
admin = []
file_locking = ["fs2"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = "4.0"
error-chain = "0.12.4"
fs2 = { version = "0.4.3", optional = true }
globset = "0.4.6"
lazy_static = "1.4"
percent-encoding = "2.1.0"
regex = "1.4"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.61"
serde_yaml = "0.8"
tabular = "0.1.4"
textwrap = { version = "0.11", features = ["term_size"] }
thousands = "0.2.0"
unicode-width = "0.1.8"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
rpassword = "5.0.1"
vlog = "0.1.4"

[build-dependencies]
clap = "4.0"
